[package]
name = "odoo-lsp"
version = "0.6.0"
edition = "2021"
authors = ["Viet Dinh <54ckb0y789@gmail.com>"]
description = "Language server for Odoo Python/JS/XML"
repository = "https://github.com/Desdaemon/odoo-lsp"
license = "MIT"
keywords = ["lsp", "language-server", "python", "javascript", "xml"]
categories = ["development-tools"]
exclude = [
  "/client", "/static", "/examples", "/scripts", ".*",
  "pnpm-lock.yaml", "package.json", "tsconfig.json", "webpack.*"
]

[workspace]
members = [
  ".",
  "crates/*"
]

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/v{version}/{name}-{target}{archive-suffix}"
bin-dir = "{bin}{binary-ext}"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.i686-pc-windows-msvc]
pkg-fmt = "zip"

[workspace.dependencies]
tree-sitter = "0.23"

[dependencies]
ropey = "1.5.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.17.0", default-features = false, features = ["macros", "rt-multi-thread", "fs", "io-std"] }
tower-lsp-server = { version = "0.21.0", features = ["proposed"] }
dashmap = { version = "6.1.0", features = ["raw-api"] }
globwalk = "0.9.1"
futures = "0.3.31"
xmlparser = "0.13.5"
tower = { version = "0.5", features = ["timeout"] }
pin-project-lite = "0.2.16"
qp-trie = "0.8.1"
lasso = { version = "0.7.2", features = ["multi-threaded"] }
intmap = "3.1.0"
libflate = "2.0.0"
phf = { version = "0.11.3", features = ["macros"] }
ts-macros = { version = "0.5.0", path = "crates/ts-macros" }
bitflags = "2.6.0"
pathdiff = "0.2.3"
rayon = "1.8.0"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
ignore = "0.4.22"
fomat-macros = "0.3.2"
num_enum = "0.7.2"
git-version = "0.3.9"
smart-default = "0.7.1"
const_format = { version = "0.2.34", features = ["assertcp"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tree-sitter-javascript = "0.23.1"
tree-sitter-python = "0.23.6"
tree-sitter.workspace = true
self_update = { version = "0.42.0", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls"] }
anyhow = { version = "1.0.97", features = ["backtrace"] }

[dev-dependencies]
async-lsp = { version = "0.2.2", features = ["tokio", "forward"] }
pretty_assertions = "1.4.0"
rstest = "0.25.0"
tokio-util = { version = "0.7.14", features = ["compat"] }
tree-sitter-xml = "0.7.0"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.0.2", features = ["system", "fs"] }
