[package]
name = "odoo-lsp"
version = "0.6.0"
edition = "2024"
rust-version = "1.88"
authors = ["Viet Dinh <54ckb0y789@gmail.com>"]
description = "Language server for Odoo Python/JS/XML"
repository = "https://github.com/Desdaemon/odoo-lsp"
license = "MIT"
keywords = ["lsp", "language-server", "python", "javascript", "xml"]
categories = ["development-tools"]
exclude = [
  "/client", "/static", "/examples", "/scripts", ".*",
  "pnpm-lock.yaml", "package.json", "tsconfig.json", "webpack.*"
]

[workspace]
members = [
  ".",
  "testing",
  "crates/*"
]

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = "thin"
debug = "full"
strip = "symbols"
split-debuginfo = "packed"

[profile.bench]
strip = false

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
opt-level = "s"

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/v{version}/{name}-{target}{archive-suffix}"
bin-dir = "{bin}{binary-ext}"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.i686-pc-windows-msvc]
pkg-fmt = "zip"

[workspace.dependencies]
tree-sitter = "0.23"
ts-macros = { version = "0.5.0", path = "crates/ts-macros" }
pretty_assertions = "1.4.0"
tokio = { version = "1.17.0", default-features = false, features = ["macros", "rt-multi-thread", "fs", "io-std"] }
tower-lsp-server = { version = "0.22.0", features = ["proposed"] }
tower = { version = "0.5", features = ["timeout"] }
futures = "0.3.31"
tree-sitter-python = "0.23.6"
globwalk = "0.9.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[dependencies]
ropey = "1.5.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
dashmap = { version = "6.1.0", features = ["raw-api"] }
xmlparser = "0.13.5"
pin-project-lite = "0.2.16"
qp-trie = "0.8.1"
lasso = { version = "0.7.2", features = ["multi-threaded"] }
intmap = "3.1.0"
phf = { version = "0.12.1", features = ["macros"] }
bitflags = "2.6.0"
pathdiff = "0.2.3"
rayon = "1.8.0"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
ignore = "0.4.22"
fomat-macros = "0.3.2"
num_enum = "0.7.2"
git-version = "0.3.9"
smart-default = "0.7.1"
const_format = { version = "0.2.34", features = ["assertcp"] }
tracing = "0.1.41"
tree-sitter-javascript = "0.23.1"
self_update = { version = "0.42.0", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls"] }
anyhow = { version = "1.0.97", features = ["backtrace"] }

tree-sitter.workspace = true
tree-sitter-python.workspace = true
tokio.workspace = true
tower-lsp-server.workspace = true
tower.workspace = true
futures.workspace = true
globwalk.workspace = true
ts-macros.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.0.2", features = ["system", "fs"] }
