[package]
name = "ts-indent"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter.workspace = true
tree-sitter-scheme = { git = "https://github.com/6cdh/tree-sitter-scheme", version = "0.23.0", rev = "63e25a4a84142ae7ee0ee01fe3a32c985ca16745" }
ts-macros = { version = "0.5.0", path = "../ts-macros" }
